Updated to Java 16 & Spring Boot 2.5.5